src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__print_stmt.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Print(
            Print {
                values: [
                    Literal(
                        String(
                            "a",
                        ),
                    ),
                    Literal(
                        Int(
                            0,
                        ),
                    ),
                    Literal(
                        Bool(
                            true,
                        ),
                    ),
                ],
            },
        ),
        Print(
            Print {
                values: [
                    Literal(
                        String(
                            "a",
                        ),
                    ),
                    Literal(
                        Int(
                            0,
                        ),
                    ),
                    Literal(
                        Bool(
                            true,
                        ),
                    ),
                ],
            },
        ),
    ],
}
