src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__scope_nested_single_semi.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31mprint[0m y


