src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__unary_expr-2.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Minus,
        right: GetVar(
            GetVar {
                name: Ident(
                    "a",
                ),
            },
        ),
    },
)
